umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@openbabel_0000_O=c1ccn([C@@H]2O[C@H_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidRingIndex
    message: Invalid ring index at position 2644
opensmiles:
  success: false
  error:
    error_type: InvalidRingIndex
    message: Invalid ring index at position 2644
