umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@openbabel_0003_-h.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: LeadingBond
    message: Leading bond at position 0
opensmiles:
  success: false
  error:
    error_type: LeadingBond
    message: Leading bond at position 0
